--- a/usersapp/templates/registration/register.html
+++ b/usersapp/templates/registration/register.html
@@ -2,58 +2,35 @@
 
 {% block body %}
 
-<!-- 
 <div class="container text-white mx-auto flex items-center justify-center min-h-screen">
-  <h2>Sign up</h2>
-  <form method="post" class="w-1/2 p-4">
+
+  <form method="post" class="border-1 p-5  rounded grid grid-cols-2 grid-rows-6  gap-2">
     {% csrf_token %}
-    {{ form }}
-    <button type="submit">Register</button>
-  </form>
-</div>
--->
-
-<div class="container text-white mx-auto flex items-center justify-center min-h-screen">
-
-<form method="post" class="border-1 p-5  rounded grid grid-cols-2 grid-rows-6  gap-2">
-  {% csrf_token %}
-  <h2 class="col-span-2 text-center border-b-1">Please, sign up! </h2>
+    <h2 class="col-span-2 text-center border-b-1">Please, sign up! </h2>
 
     <label for="id_name">Name:</label>
-
-
-
-    <input class="border border-white bg-white p-1 rounded text-black"  type="text" name="name" maxlength="100" required="" id="id_name">
-
-
-
+    <input class="border border-white bg-white p-1 rounded text-black" type="text" name="name" maxlength="100"
+      required="" id="id_name">
 
     <label for="id_email">Email:</label>
-
-
-
-    <input class="border border-white bg-white p-1 rounded text-black" type="text" name="email" maxlength="200" autofocus="" required="" id="id_email">
-
-
-
+    <input class="border border-white bg-white p-1 rounded text-black" type="text" name="email" maxlength="200"
+      autofocus="" required="" id="id_email">
 
     <label for="id_password1">Password:</label>
-
-    <input class="border border-white bg-white p-1 rounded text-black"  type="password" name="password1" autocomplete="new-password" required=""
-      aria-describedby="id_password1_helptext" id="id_password1">
+    <input class="border border-white bg-white p-1 rounded text-black" type="password" name="password1"
+      autocomplete="new-password" required="" aria-describedby="id_password1_helptext" id="id_password1">
 
     <label for="id_password2">Password confirmation:</label>
+    <input class="border border-white bg-white p-1 rounded text-black" type="password" name="password2"
+      autocomplete="new-password" required="" aria-describedby="id_password2_helptext" id="id_password2">
 
-    <input class="border border-white bg-white p-1 rounded text-black"  type="password" name="password2" autocomplete="new-password" required=""
-      aria-describedby="id_password2_helptext" id="id_password2">
 
+    <button class="col-span-2 border-1 cursor-pointer" type="submit">Sign up</button>
+    <p>
+      If you already have an account, <a class="underline" href="{% url  'login' %}">login here</a>!
+    </p>
 
-      <button class="col-span-2 border-1 cursor-pointer" type="submit">Sign up</button>
-      <p>
-        If you already have an account, <a class="underline"  href="{% url "login" %}">login here</a>!
-      </p>
-
-    </form>
+  </form>
 </div>
 
 {% endblock %}
